# micros_plugin_manager

./: .gitignore  CMakeLists.txt  README.md  plugin.cmake
include/: dataOperator.h  labelGeneratorBase.h  labelTools.h  pluginManager.h  sensor.h  sensorPluginBase.h
resources/: plugin.xml  sensorPluginWithoutSensorPluginsElementTest.xml  twoInOne.xml  v4l2.xml
src/: pluginManager.cpp  sensor.cpp
test/: apiTest.cpp  integrateTest.cpp  labelClassTest.cpp  labelGeneratorPluginLoadTest.cpp  sensorClassTest.cpp  sensorPluginLoadTest.cpp  sensorPluginXMLParseTest.cpp  tinyxml2test.cpp  v4l2Test.cpp
